<resources>
    <string name="app_name">运维信息展示系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user">用  户  名:</string>
    <string name="password">用户密码:</string>
    <string name="user_hint">请输入用户名</string>
    <string name="psd_hint">请输入密码</string>
    <string name="login_hint">记住用户名</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="login">登陆</string>
    <string name="cancel">取消</string>
    <string name="title">系统登陆</string>
    <string name="title_activity_scope">运维展示信息总览</string>
    <string name="title_activity_quanwanggailan">全网概况</string>
    <string name="title_activity_shebeizhuangtai">设备状态</string>
    <string name="title_activity_shishixinxi">实时信息</string>
    <string name="title_activity_guzhangbaogao">故障报告</string>

</resources>
