<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.dbdky.yfzx.mytest.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/login_bg"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="417dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:src="@drawable/login_logo_jc" />

            <ScrollView
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:background="@drawable/login_box"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        >
                        <TextView
                            android:id="@+id/textview_user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:textSize="18sp"
                            android:text="@string/user" />

                        <!-- <EditText
                            android:id="@+id/edit_user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/user_hint"
                            android:inputType="textPassword" >
                            <requestFocus />
                        </EditText> -->
                        <AutoCompleteTextView
                            android:id="@+id/cardNumAuto"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/user_hint"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        >
                        <TextView
                            android:id="@+id/textview_psd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_gravity="bottom"
                            android:text="@string/password" />

                        <EditText
                            android:id="@+id/edit_psd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/psd_hint"
                            android:inputType="textPassword"
                            >
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="5dp"

                        >
                        <CheckBox
                            android:id="@+id/checkBox_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:checked="true"
                            android:text="@string/login_hint" />
                        <RadioGroup
                            android:orientation="horizontal"
                            android:id="@+id/loginRG"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="60dp"
                            android:contentDescription="在线和离线">
                            <RadioButton
                                android:id="@+id/radioButton_online"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/offline" />
                            <RadioButton
                                android:id="@+id/radioButton_offline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/online" />
                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        >
                        <Button
                            android:id="@+id/button_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/content_button_bg"
                            android:text="@string/login"
                            android:textSize="18sp"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/button_exit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:background="@drawable/content_button_bg"
                            android:textSize="18sp"
                            android:text="@string/cancel"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
